--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <section id="contact-form" class="contact-form-section">
     <h2>Formulario de Contacto</h2>
-    <form id="contact-form" action="#" method="POST" class="contact-form">
+    <form>
       <div class="form-group">
         <label for="name">Nombre:</label>
         <input type="text" id="name" name="name" placeholder="Ingresa tu nombre">
