--- a/user-page.html
+++ b/user-page.html
@@ -14,7 +14,7 @@
 
   <section id="product-form" class="contact-form-section">
     <h2>¿Qué moto quieres comprar?</h2>
-    <form id="product-form" action="#" method="POST" class="contact-form">
+    <form>
       <div class="form-group">
         <label for="product-name">Nombre de la moto</label>
         <input type="text" id="product-name" name="product-name" placeholder="Ingresa el nombre de la moto que quieres comprar">
